# stellovault

./: PR_SUMMARY.md
contracts/: .slither.json  Cargo.test.toml  Cargo.toml  run_tests.sh
contracts/collateral-registry/: Cargo.toml  README.md
contracts/collateral-registry/src/: classification.rs  collateral.rs  lib.rs  locking.rs  ownership.rs  valuation.rs  verification.rs
contracts/collateral-registry/tests/: collateral_tests.rs
contracts/escrow-manager/src/: lib.rs  refund.rs
contracts/example/src/: lib.rs
contracts/fuzz/: Cargo.toml
contracts/fuzz/fuzz_targets/: fuzz_governance_voting.rs
contracts/governance/src/: lib.rs
contracts/invoice-contract/: Cargo.toml  INVOICE_CONTRACT.md
contracts/invoice-contract/src/: cross_border.rs  fraud_detection.rs  invoice.rs  lib.rs  payment.rs  verification.rs
contracts/invoice-contract/tests/: invoice_tests.rs
contracts/loan-management/: Cargo.toml
contracts/loan-management/src/: analytics.rs  default_handling.rs  interest.rs  lib.rs  loan.rs  repayment.rs  restructuring.rs
contracts/loan-management/tests/: loan_tests.rs
contracts/oracle-adapter/src/: lib.rs
contracts/protocol-treasury/src/: lib.rs
contracts/reputation-registry/src/: lib.rs
contracts/risk-assessment/src/: lib.rs
contracts/tests/: attack_vectors.rs  common.rs  economic_simulation.rs  formal_verification.rs  gas_optimization.rs  integration_cross_contract.rs  performance_tests.rs  property_based_tests.rs  security_tests.rs  unit_collateral_registry.rs  unit_escrow_manager.rs
contracts/upgrade-system/: Cargo.toml  README.md
(+68 files in other folders)
