[workspace]
members = [
    "collateral-registry",
    "escrow-manager",
    "example",
    "governance",
    "invoice-contract",
    "loan-management",
    "oracle-adapter",
    "protocol-treasury",
    "reputation-registry",
    "risk-assessment",
    "upgrade-system",
]
resolver = "2"
exclude = ["fuzz"]
